--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <div class="container">
+        <div class="row">
+            <header>
+                <div class="nav__window">
+                    <figure class=".nav__figure">
+                        <img class="nav__img" src="./assets/live.png" alt="">
+                    </figure>
+                    <ul class="nav__tabs">
+                        <li class="nav__tab"><a class="nav__tab--anchor red" href="#">Home</a></li>
+                        <li class="nav__tab"><a class="nav__tab--anchor black" href="#">Discover News</a></li>
+                        <li class="nav__contact"><a href="#" class="nav__contact--text">CONTACT</a></li>
+                    </ul>
+                </div>
+            </header>
+        </div>
+    </div>
+    <section>
+        <div class="container">
+            <div class="row">
+                <h1>
+                    America's most trusted live news platform
+                </h1>
+                <h2>
+                    DISCOVER THE LATEST NEWS AND BLOGS WITH <span class="red">LIVE NEWS</span>
+                </h2>
+                <div class="search">
+                    <input type="text" placeholder="Search by Topic, Location, or Event">
+                    <button></button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
