--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Newzer</title>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script> 
 </head>
 <body>
     <div class="container">
@@ -16,8 +17,8 @@
                         <img class="nav__img" src="./assets/live.png" alt="">
                     </figure>
                     <ul class="nav__tabs">
-                        <li class="nav__tab"><a class="nav__tab--anchor red" href="#">Home</a></li>
-                        <li class="nav__tab"><a class="nav__tab--anchor black" href="#">Discover News</a></li>
+                        <li class="nav__tab"><a class="nav__tab--anchor red" href="./index.html">Home</a></li>
+                        <li class="nav__tab"><a class="nav__tab--anchor black" href="./news.html">Discover News</a></li>
                         <li class="nav__contact"><a href="#" class="nav__contact--text">CONTACT</a></li>
                     </ul>
                 </div>
@@ -27,16 +28,22 @@
     <section>
         <div class="container">
             <div class="row">
-                <h1>
+                <h1 class="main__title">
                     America's most trusted live news platform
                 </h1>
-                <h2>
+                <h2 class="main__title--second">
                     DISCOVER THE LATEST NEWS AND BLOGS WITH <span class="red">LIVE NEWS</span>
                 </h2>
                 <div class="search">
-                    <input type="text" placeholder="Search by Topic, Location, or Event">
-                    <button></button>
+                    <input  class="search__input" type="text" placeholder="Search by Title, Description, or Content">
+                    <button class="search__btn">
+                        <i class="fa fa-search" aria-hidden="true"></i>
+                    </button>
+                    
                 </div>
+                <figure class="main__fig">
+                    <img class="main__img" src="./assets/monitor.png" alt="">
+                </figure>
             </div>
         </div>
     </section>
