--- a/news.html
+++ b/news.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Newzer</title>
+    <title>Live News</title>
     <link rel="stylesheet" href="./style.css">
     <script src="https://kit.fontawesome.com/c8e4d183c2.js" crossorigin="anonymous"></script>
     <script src="./news.js"></script>
@@ -42,7 +42,6 @@
                         </figure>
                         <div class="texts">
                             <h1 class="title">Title: Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat voluptates in quis sed deleniti recusandae eaque corrupti repellendus quod harum?</h1>
-                            <p class="description">Description: </p>
                         </div>
                     </div>
                     <div class="news">
