updated news search bar

--- a/NewsPage.html
+++ b/NewsPage.html
@@ -15,7 +15,9 @@
             <header>
                 <div class="nav__window">
                     <figure class=".nav__figure">
-                        <img class="nav__img" src="./assets/live.png" alt="">
+                        <a href="/index.html">
+                            <img class="nav__img" src="/assets/live.png" alt="">
+                        </a>
                     </figure>
                     <ul class="nav__tabs">
                         <li class="nav__tab"><a class="nav__tab--anchor red" href="./index.html">Home</a></li>
@@ -30,15 +32,19 @@
         <div class="container">
             <div class="row">
                 <div class="newspage__news">
-                    <figure class="newspage__fig">
+                    <div class="newspagediv">
+                        <figure class="newspage__fig">
+                            <img src="" alt="" class="newspage__img">
+                        </figure><figure class="newspage__fig">
                         <img src="" alt="" class="newspage__img">
                     </figure>
+                    </div>
                     <div class="newspage__texts">
                         <h1 class="title">dascas</h1>
                         <p class="description"></p>
                         <p class="content"></p>
                     </div>
-                    <button class="newspage__button">View Article</button>
+                    <button class="newspage__button" target=”_blank”>View Full Article</button>
                 </div>                
                 
             </div>
