--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
             <header>
                 <div class="nav__window">
                     <figure class=".nav__figure">
-                        <img class="nav__img" src="./assets/live.png" alt="">
+                        <a href="/index.html">
+                            <img class="nav__img" src="/assets/live.png" alt="">
+                        </a>
                     </figure>
                     <ul class="nav__tabs">
                         <li class="nav__tab"><a class="nav__tab--anchor red" href="./index.html">Home</a></li>
@@ -34,13 +36,12 @@
                 <h2 class="main__title--second">
                     DISCOVER THE LATEST NEWS AND BLOGS WITH <span class="red">LIVE NEWS</span>
                 </h2>
-                <div class="search">
-                    <input  class="search__input" type="text" placeholder="Search by Title, Description, or Content">
-                    <button class="search__btn">
+                    <form class="search" action="form">
+                        <input  class="search__input" type="search" placeholder="Search by Title, Description, or Content">
+                        <button class="search__btn">
                         <i class="fa fa-search" aria-hidden="true"></i>
-                    </button>
-                    
-                </div>
+                        </button>
+                    </form>
                 <figure class="main__fig">
                     <img class="main__img" src="./assets/monitor.png" alt="">
                 </figure>
