--- a/news.html
+++ b/news.html
@@ -15,8 +15,9 @@
             <header>
                 <div class="nav__window">
                     <figure class=".nav__figure">
-                        <img class="nav__img" src="./assets/live.png" alt="">
-                    </figure>
+                        <a href="/index.html">
+                            <img class="nav__img" src="/assets/live.png" alt="">
+                        </a>                    </figure>
                     <ul class="nav__tabs">
                         <li class="nav__tab"><a class="nav__tab--anchor red" href="./index.html">Home</a></li>
                         <li class="nav__tab"><a class="nav__tab--anchor black" href="./news.html">Discover News</a></li>
@@ -26,12 +27,12 @@
             </header>
         </div>
     </div>
-    <div class="search">
-        <input  class="search__input" type="text" placeholder="Search by Title, Description, or Content">
+    <form class="search" action="form">
+        <input  class="search__input" type="search" placeholder="Search by Title, Description, or Content">
         <button class="search__btn">
-            <i class="fa fa-search" aria-hidden="true"></i>
+        <i class="fa fa-search" aria-hidden="true"></i>
         </button>
-    </div>
+    </form>
     <section>
         <div class="container">
             <div class="row">
