--- a/news.html
+++ b/news.html
@@ -55,6 +55,9 @@
                         </div>
                     </div>
                 </div>
+                <!-- <div class="news__loading">
+                    <i class="fas fa-spinner"></i>
+                </div> -->
             </div>
         </div>
     </section>
