--- a/news.html
+++ b/news.html
@@ -37,27 +37,11 @@
         <div class="container">
             <div class="row">
                 <div class="news__container">
-                    <div class="news">
-                        <figure class="img">
-                            <img src="https://s.yimg.com/uu/api/res/1.2/2SH.Nx98zhPapkJvwsv7jQ--~B/Zmk9ZmlsbDtoPTYzMDtweW9mZj0wO3c9MTIwMDthcHBpZD15dGFjaHlvbg--/https://media-mbst-pub-ue1.s3.amazonaws.com/creatr-uploaded-images/2023-01/2f90fb70-9acc-11ed-bbf6-ab973f6a8d5c.cf.jpg" alt="" class="news__img">
-                        </figure>
-                        <div class="texts">
-                            <h1 class="title">Title: Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat voluptates in quis sed deleniti recusandae eaque corrupti repellendus quod harum?</h1>
-                        </div>
-                    </div>
-                    <div class="news">
-                        <figure class="img">
-                            <img src="https://s.yimg.com/uu/api/res/1.2/2SH.Nx98zhPapkJvwsv7jQ--~B/Zmk9ZmlsbDtoPTYzMDtweW9mZj0wO3c9MTIwMDthcHBpZD15dGFjaHlvbg--/https://media-mbst-pub-ue1.s3.amazonaws.com/creatr-uploaded-images/2023-01/2f90fb70-9acc-11ed-bbf6-ab973f6a8d5c.cf.jpg" alt="" class="news__img">
-                        </figure>
-                        <div class="texts">
-                            <h1 class="title">Title: Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat voluptates in quis sed deleniti recusandae eaque corrupti repellendus quod harum?</h1>
-                            <p class="description">Description: </p>
-                        </div>
-                    </div>
+                    
                 </div>
-                <!-- <div class="news__loading">
+                <div class="news__loading">
                     <i class="fas fa-spinner"></i>
-                </div> -->
+                </div>
             </div>
         </div>
     </section>
